# awesome-noughts

./: .gitignore  alt_build.sh  meson.build
src/: NoughtsCanvas.cpp  NoughtsCanvas.hpp  NoughtsGame.cpp  NoughtsGame.hpp  NoughtsWindow.cpp  NoughtsWindow.hpp  RandomAI  main.cpp
